--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 [tox:jenkins]
 downloadcache = ~/cache/pip
 
-[testenv:rpm-packaging-lint]
+[testenv:lint]
 commands =
   {toxinidir}/tools/run_renderspec.sh {toxinidir}
 
