Update epoch for Fedora/CentOS
Change-Id: I172cec7c6f4b03a863c270f7e9d781c57eced9c9

--- a/epoch/fedora.yaml
+++ b/epoch/fedora.yaml
@@ -2,9 +2,11 @@ epochs:
   oslo.config: 2
   ceilometer: 1
   cinder: 1
+  designate: 1
   glance: 1
   heat: 1
   horizon: 1
+  ironic: 1
   keystone: 1
   manila: 1
   neutron: 1
@@ -16,4 +18,7 @@ epochs:
   python-keystoneclient: 1
   python-novaclient: 1
   python-openstackclient: 1
+  sahara: 1
+  tempest: 1
   trove: 1
+  zaqar: 1
