Force LC_ALL=en_US in test runs
Change-Id: Ifd464922e123d4ceb6f787b8169cf99bb65242fc

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,9 @@ envlist = rpm-packaging-lint
 skipsdist = True
 
 [testenv]
-setenv = VIRTUAL_ENV={envdir}
+setenv =
+    VIRTUAL_ENV={envdir}
+    LC_ALL=en_US.utf-8
 install_command = pip install -U -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} {opts} {packages}
 deps = -r{toxinidir}/test-requirements.txt
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
