--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 [testenv:lint]
 commands =
   {toxinidir}/tools/run_renderspec.sh {toxinidir}
+  {toxinidir}/tools/run_specchecks.sh {toxinidir}
   {toxinidir}/tools/run_speccleaner.sh {toxinidir}
 
 [testenv:venv]
