Add Constraints support
This avoids random breakage from new releases that have not passed
global requirements integration testing

Change-Id: Ibafde948c93ac5daa943b574debd4dc7eadef2cd
(cherry picked from commit 3a44e3df354fc3cd8001b68dc044fa7e554286a5)

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-minversion = 1.8
+minversion = 2.1
 envlist = rpm-packaging-lint
 skipsdist = True
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
-install_command = pip install -U {opts} {packages}
+install_command = pip install -U -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt?h=stable/ocata} {opts} {packages}
 deps = -r{toxinidir}/test-requirements.txt
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 
