monasca-notification: various fixes
* Add missing rcopenstack-monasca-notification symlink
  on SUSE
* Fix permissions
* Fixed duplicated creation of /var/log/monasca-notification
* Use an invalid email address in example configuration (rather
  than a hp.com one).

Change-Id: Ied80ea4d520fc9a78c68dc84dd81d9fce332b233

--- a/openstack/monasca-notification/monasca-notification.yaml
+++ b/openstack/monasca-notification/monasca-notification.yaml
@@ -39,7 +39,7 @@ notification_types:
         user:
         password:
         timeout: 60
-        from_addr: hpcs.mon@hp.com
+        from_addr: monasca-notification@none.invalid
 
 processors:
     alarm:
