openstack-monasca-agent: various fixes
* Fixed enabling-disabling systemd service
* Fixed permissions
* Create rundir for tmpfiles (we need this because
  /run is mounted as tmpfs sometimes).
* Write pid file in systemd service.
* Create /sbin/rcopenstack-monasca-agent symlink on SUSE
* Restricted sudoers file to just the privileges actually required
  by checks.

Change-Id: I49a82805491235aa118b3d8482330b97dc232c01
Co-Authored-By: Thomas Bechtold <tbechtold@suse.com>

--- a/openstack/monasca-agent/openstack-monasca-agent.service
+++ b/openstack/monasca-agent/openstack-monasca-agent.service
@@ -6,7 +6,7 @@ Type=simple
 User=monasca-agent
 Group=monasca
 Restart=on-failure
-ExecStart=/usr/bin/supervisord -c /etc/monasca/agent/supervisor.conf -n
+ExecStart=/usr/bin/supervisord -c /etc/monasca/agent/supervisor.conf -n --pidfile /run/openstack-monasca-agent/monasca-agent-supervisord.pid
 
 [Install]
 WantedBy=multi-user.target
