--- a/openstack/monasca-log-api/openstack-monasca-log-api-wsgi.conf
+++ b/openstack/monasca-log-api/openstack-monasca-log-api-wsgi.conf
@@ -4,7 +4,7 @@ Listen 5607
     WSGIDaemonProcess monasca-log-api processes=2 threads=1 socket-timeout=120 user=monasca-log-api group=monasca display-name=%{GROUP}
     WSGIProcessGroup monasca-log-api
     WSGIApplicationGroup %{GLOBAL}
-    WSGIScriptAlias / /usr/bin/monasca-log-api.wsgi
+    WSGIScriptAlias / /usr/bin/monasca-log-api-wsgi
     WSGIPassAuthorization On
 
     LogLevel info
