Add dependency on linuxbridge agent service to network service
VLAN device defined in /etc/sysconfig/network-script/
is not reattached to bridge after restart network service.
So, linux bridge agent needs to be restarted after network service.

Change-Id: I756fdb7958dbd747834b0c1d67d7d03b1c3cca4d
Signed-off-by: heetae82.ahn <heetae82.ahn@samsung.com>

--- a/openstack/neutron/neutron-linuxbridge-agent.service
+++ b/openstack/neutron/neutron-linuxbridge-agent.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=OpenStack Neutron Linux Bridge Agent
-After=syslog.target network.target
+After=syslog.target network.target network.service
+BindsTo=network.service
 
 [Service]
 Type=simple
