Add libvirtd, libvirtd-guests.service dependencies
To guarantee pollster registration after libvirtd, systemd
dependency rule has to be added. Unless ceilometer-compute agent
will fail to start and just stops with exception below.

    ExtensionLoadError: Failed to connect socket to
    '/var/run/libvirt/libvirt-sock-ro': No such file or directory

Change-Id: Iebaed8763854d86db4a327114c4057363a7b7a74
Signed-off-by: JunHeon <jheon.hwang@samsung.com>
Signed-off-by: Minho Ban <mhban@samsung.com>

--- a/openstack/nova/openstack-nova-compute.service
+++ b/openstack/nova/openstack-nova-compute.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=OpenStack Nova Compute Server
-After=syslog.target network.target
+After=syslog.target network.target libvirtd.service libvirt-guests.service
 
 [Service]
 Environment=LIBGUESTFS_ATTACH_METHOD=appliance
