--- a/tox.ini
+++ b/tox.ini
@@ -11,11 +11,15 @@ install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstac
 deps = -r{toxinidir}/test-requirements.txt
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 
-[testenv:lint]
+[testenv:linters]
 commands =
   {toxinidir}/tools/run_renderspec.sh {toxinidir}
   {toxinidir}/tools/run_specchecks.sh {toxinidir}
   {toxinidir}/tools/run_speccleaner.sh {toxinidir}
+
+# compat. remove me
+[testenv:lint]
+commands = {[testenv:linters]commands}
 
 [testenv:venv]
 commands = {posargs}
