Add zuul.yaml for zuulv3
This converts the tox-lint job to zuulv3. There is a standard
openstack-tox-linters that we can rely on.

Change-Id: I31eb188d9bde1fa0db5a46b3fa8b412f729d939e

--- a/tox.ini
+++ b/tox.ini
@@ -11,11 +11,15 @@ install_command = pip install -U -c{env:UPPER_CONSTRAINTS_FILE:https://git.opens
 deps = -r{toxinidir}/test-requirements.txt
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 
-[testenv:lint]
+[testenv:linters]
 commands =
   {toxinidir}/tools/run_renderspec.sh {toxinidir}
   {toxinidir}/tools/run_specchecks.sh {toxinidir}
   {toxinidir}/tools/run_speccleaner.sh {toxinidir}
+
+# compat. remove me
+[testenv:lint]
+commands = {[testenv:linters]commands}
 
 [testenv:venv]
 commands = {posargs}
