--- a/tox.ini
+++ b/tox.ini
@@ -9,10 +9,14 @@ install_command = pip install -U {opts} {packages}
 deps = -r{toxinidir}/test-requirements.txt
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 
-[testenv:lint]
+[testenv:linters]
 commands =
   {toxinidir}/tools/run_renderspec.sh {toxinidir}
   {toxinidir}/tools/run_speccleaner.sh {toxinidir}
+
+# compat. remove me
+[testenv:lint]
+commands = {[testenv:linters]commands}
 
 [testenv:venv]
 commands = {posargs}
