--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ enum34>=1.0.4;python_version=='2.7' or python_version=='2.6' or python_version==
 # NOTE(sdague): before allowing in >= 0.21 please be sure
 # https://github.com/eventlet/eventlet/issues/401 is resolved
 eventlet>=0.18.2,!=0.18.3,!=0.20.1,<0.21.0  # MIT
-exabgp>=4.0.1  # BSD
+exabgp>=4.0.4  # BSD
 extras>=1.0.0  # MIT
 falcon>=1.0.0  # Apache-2.0
 Flask>=0.10,!=0.11,<1.0  # BSD
@@ -66,7 +66,6 @@ fortiosclient>=0.0.2  # Apache-2.0
 futures>=3.0.0;python_version=='2.7' or python_version=='2.6'  # BSD
 futurist>=1.2.0  # Apache-2.0
 funcsigs>=1.0.0;python_version=='2.7' or python_version=='2.6'  # Apache-2.0
-gitdb>=0.6.4  # BSD License (3 clause)
 glance-store>=0.22.0  # Apache-2.0
 google-api-python-client>=1.4.2  # Apache-2.0
 graphviz>=0.4,!=0.5.0  # MIT License
@@ -115,8 +114,6 @@ monasca-common>=1.4.0  # Apache-2.0
 monasca-statsd>=1.1.0  # Apache-2.0
 monotonic>=0.6  # Apache-2.0
 msgpack>=0.4.0  # Apache-2.0
-# Deprecated, was renamed to msgpack, please remove ASAP
-msgpack-python>=0.4.0  # Apache-2.0
 munch>=2.1.0  # MIT
 murano-pkg-check>=0.3.0  # Apache-2.0
 mypy>=0.501;python_version>='3.2'  # MIT
@@ -127,11 +124,11 @@ netmiko>=1.2.5  # MIT
 # Pinned to 1.0 branch until projects update, see:
 #  https://bugs.launchpad.net/openstack-requirements/+bug/1718576
 networkx>=1.10,<2.0  # BSD
-neutron-lib>=1.12.0  # Apache-2.0
+neutron-lib>=1.13.0  # Apache-2.0
 notifier>=1.0.3  # Apache-2.0
 oauth2client>=1.5.0,!=4.0.0  # Apache-2.0
 oauthlib>=0.6.0  # BSD
-openstackdocstheme>=1.17.0  # Apache-2.0
+openstackdocstheme>=1.18.1  # Apache-2.0
 ordereddict>=1.1  # MIT
 osc-lib>=1.8.0  # Apache-2.0
 oslo.cache>=1.26.0  # Apache-2.0
@@ -152,7 +149,7 @@ oslo.serialization>=2.18.0,!=2.19.1  # Apache-2.0
 oslo.service>=1.24.0,!=1.28.1  # Apache-2.0
 oslo.utils>=3.33.0  # Apache-2.0
 oslo.vmware>=2.17.0  # Apache-2.0
-oslo.versionedobjects>=1.28.0  # Apache-2.0
+oslo.versionedobjects>=1.31.2  # Apache-2.0
 osprofiler>=1.4.0  # Apache-2.0
 os-apply-config>=5.0.0  # Apache-2.0
 os-brick>=2.2.0  # Apache-2.0
@@ -166,7 +163,7 @@ os-testr>=1.0.0  # Apache-2.0
 os-traits>=0.4.0  # Apache-2.0
 os-vif>=1.7.0,!=1.8.0  # Apache-2.0
 ovs>=2.8.0  # Apache-2.0
-os-win>=2.0.0  # Apache-2.0
+os-win>=3.0.0  # Apache-2.0
 os-xenapi>=0.3.1  # Apache-2.0
 paramiko>=2.0.0  # LGPLv2.1+
 Parsley>=1.2  # MIT
@@ -199,7 +196,6 @@ pykmip>=0.7.0  # Apache 2.0 License
 pyldap>=2.4.20  # PSF
 pylxd>=2.2.4  # Apache-2.0
 pymemcache>=1.2.9,!=1.3.0  # Apache 2.0 License
-pymod2pkg>=0.7.0,!=0.8.0  # Apache-2.0
 pymongo>=3.0.2,!=3.1  # Apache-2.0
 PyMySQL>=0.7.6  # MIT License
 python-etcd>=0.4.3  # MIT License
@@ -238,6 +234,7 @@ aodhclient>=0.9.0  # Apache-2.0
 gnocchiclient>=3.3.1  # Apache-2.0
 tricircleclient>=0.1.1  # Apache-2.0
 python-barbicanclient>=4.0.0,!=4.5.0,!=4.5.1  # Apache-2.0
+python-blazarclient>=1.0.0  # Apache-2.0
 python-ceilometerclient>=2.5.0  # Apache-2.0
 python-cinderclient>=3.3.0  # Apache-2.0
 python-congressclient>=1.9.0,<2000  # Apache-2.0
@@ -248,7 +245,7 @@ python-hnvclient>=0.1.0  # Apache-2.0
 python-glanceclient>=2.8.0  # Apache-2.0
 python-glareclient>=0.3.0  # Apache-2.0
 python-ironic-inspector-client>=1.5.0  # Apache-2.0
-python-ironicclient>=1.14.0  # Apache-2.0
+python-ironicclient>=2.2.0  # Apache-2.0
 python-karborclient>=0.6.0  # Apache-2.0
 python-keystoneclient>=3.8.0  # Apache-2.0
 python-kingbirdclient>=0.1.0  # Apache-2.0
@@ -271,7 +268,7 @@ python-solumclient>=1.2.7  # Apache-2.0
 python-swiftclient>=3.2.0  # Apache-2.0
 python-tackerclient>=0.8.0  # Apache-2.0
 python-troveclient>=2.2.0  # Apache-2.0
-python-vitrageclient>=1.3.0  # Apache-2.0
+python-vitrageclient>=2.0.0  # Apache-2.0
 python-watcherclient>=1.1.0  # Apache-2.0
 python-zaqarclient>=1.0.0  # Apache-2.0
 python-zunclient>=1.0.0  # Apache-2.0
