--- a/openstack/nova/nova-dist.conf
+++ b/openstack/nova/nova-dist.conf
@@ -16,7 +16,7 @@ rootwrap_config = /etc/nova/rootwrap.conf
 use_stderr = False
 
 [database]
-connection = mysql://nova:nova@localhost/nova
+connection = mysql+pymysql://nova:nova@localhost/nova
 max_retries = -1
 
 [keystone_authtoken]
