freezer: run freezer-scheduler service as root user
freezer-scheduler launch the freezer-agent, that is the process
that does the backup. To performing the operation, this process
needs to be executed as root.

Change-Id: Iccdac65677b29cb9041f82296ad415bc454b8ba4

--- a/openstack/freezer/openstack-freezer-scheduler.service
+++ b/openstack/freezer/openstack-freezer-scheduler.service
@@ -4,7 +4,8 @@ After=syslog.target network.target
 
 [Service]
 Type=simple
-User=freezer
+User=root
+Group=root
 ExecStart=/usr/bin/freezer-scheduler start
 Restart=on-failure
 
