Replace deprecated "auth_uri" by "www_authenticate_uri"
According to [1], "auth_uri" has been deprecated.
This patch replace it by using "www_authenticate_uri" instead.

[1] https://review.openstack.org/#/c/508522

Change-Id: Ib644a96425f0582f3d06249828275e65b645ab23

--- a/openstack/monasca-api/api-config.conf
+++ b/openstack/monasca-api/api-config.conf
@@ -121,7 +121,7 @@ url = "mysql+pymysql://monapi:password@127.0.0.1/mon"
 
 [keystone_authtoken]
 identity_uri = http://127.0.0.1:35357
-auth_uri = http://127.0.0.1:5000
+www_authenticate_uri = http://127.0.0.1:5000
 admin_password = admin
 admin_user = admin
 admin_tenant_name = admin
