Use python3 as python for envs as spec_cleaner dropped python2
https://github.com/openSUSE/spec-cleaner/issues/234

Change-Id: I5a901ade60949af2c5246ce1ae1877d7feb37b4d

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist = rpm-packaging-lint
 skipsdist = True
 
 [testenv]
+basepython = python3
 setenv =
     VIRTUAL_ENV={envdir}
     LC_ALL=en_US.utf-8
