--- a/openstack/cinder/openstack-cinder-volume.service
+++ b/openstack/cinder/openstack-cinder-volume.service
@@ -5,7 +5,7 @@ After=syslog.target network.target
 [Service]
 LimitNOFILE=131072
 LimitNPROC=131072
-TasksMax=8192
+TasksMax=infinity
 Type=notify
 User=cinder
 ExecStart=/usr/bin/cinder-volume
