monasca-agent: fix references in service files
Some references in the monasca-agent service files still
used upstream service names to reference services. As a result
of this, the PartOf references from the component services
were unresolvable, causing them not to get restarted upon
restarting openstack-monasca-agent.target.

Change-Id: I7bbfb77466964b10edec6f595feb68ccf2eeaa79
(cherry picked from commit 9dbc1aab393093a9c335c7632dfb2021a2af5efc)

--- a/openstack/monasca-agent/openstack-monasca-agent-forwarder.service
+++ b/openstack/monasca-agent/openstack-monasca-agent-forwarder.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Monasca Agent - Forwarder
-PartOf=monasca-agent.target
+PartOf=openstack-monasca-agent.target
 After=network-online.target
 Wants=network-online.target
 
